ecommerce-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.135.234.190.187.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

    - host: api.135.234.190.187.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080

    - host: zipkin.135.234.190.187.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin-service
                port:
                  number: 9411

    - host: eureka.135.234.190.187.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-discovery-service
                port:
                  number: 8761
