jenkins-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-sonar-ingress
  namespace: jenkinssoanr
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: 57.153.163.158.nip.io
      http:
        paths:
          - path: /jenkins(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
