jenkins-sonar-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-sonar-ingress
  namespace: jenkinssoanr
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: 57.153.163.158.nip.io
      http:
        paths:
          - path: /jenkins(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
            # No rewrite-target aquí
          - path: /sonar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sonar
                port:
                  number: 9000
            # Solo para SonarQube, reescribe el path:
            # Puedes usar per-location annotation si tu versión de ingress-nginx lo soporta:
            # nginx.ingress.kubernetes.io/rewrite-target: /$2
